crates/sotf-plugins/tests/snapshots/render_plan_snapshots__delay__delay__desktop_1000.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "delay",
  "width": 1000.0,
  "orientation": "horizontal",
  "knob_size": "md",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "main",
    "output"
  ],
  "columns_collapsed": [],
  "config_controls": [],
  "main_groups": [
    {
      "title": "",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Delay",
          "control_type": "vertical_slider",
          "unit": "ms",
          "range": [
            0.0,
            5000.0
          ],
          "read_only": false
        },
        {
          "param_index": 1,
          "param_name": "Feedback",
          "control_type": "vertical_slider",
          "unit": "",
          "range": [
            -0.95,
            0.95
          ],
          "read_only": false
        }
      ]
    }
  ],
  "output_controls": [
    {
      "param_index": 2,
      "param_name": "Mix",
      "control_type": "knob",
      "unit": "%",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    }
  ],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
